--- a/OS/src/config_os.h.in
+++ b/OS/src/config_os.h.in
@@ -42,4 +42,13 @@
 /* Define to 1 if OS uses Glpk */
 #undef OS_HAS_GLPK
 
+/* use 64 bit integers */
+#undef OS_USE_XML_LONG_INTEGER
+
+/* Define to 64-bit integer type */
+#undef OS_XML_INT64
+
+/* Define to 64-bit unsigned integer type */
+#undef OS_XML_UINT64
+
 #endif /* __CONFIG_OS_H__ */
