--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,11 @@ matrix:
         apt:
           packages:
             - gfortran
-    - os: osx
+    - os: osx 
+      osx_image: xcode10
+      env: OSX=10.13
+      compiler: clang
+    - os: osx 
       osx_image: xcode9.2
       env: OSX=10.12
       compiler: clang
@@ -15,42 +19,15 @@ matrix:
       osx_image: xcode8
       env: OSX=10.11
       compiler: clang
-    - os: osx
-      osx_image: xcode6.4
-      env: OSX=10.10
-      compiler: clang
-  allow_failures:
-    - os: osx
-
-matrix:
-  include:
-    - os: osx
-      osx_image: osx10.11
-      env: OSX=10.11
-      compiler: clang
-    - os: osx
-      osx_image: xcode7
-      env: OSX=10.10
-      compiler: clang
-    - os: osx
-      osx_image: beta-xcode6.2
-      env: OSX=10.9
-      compiler: clang
-    - os: linux
-      addons:
-        apt:
-          packages:
-          - gfortran
   allow_failures:
     - os: osx
 
 before_script:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then  export PLATFORM=osx$OSX-x86_64-clang`clang -dumpversion`; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; brew install bash gcc; brew link --overwrite gcc; gfortran --version; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then export PLATFORM=linux-x86_64-gcc`gcc -dumpversion`; fi
-  - git clone https://github.com/coin-or-tools/BuildTools
-  - bash BuildTools/get.dependencies.sh fetch > /dev/null
+  - git clone https://github.com/coin-or/COIN-OR-OptimizationSuite COIN
+  - cd COIN
+  - export PROJECT=`echo $TRAVIS_REPO_SLUG | cut -d "/" -f 2`
+  - bash ./coin.install.sh fetch --no-prompt --main-proj=$PROJECT > /dev/null
 
 script:
-  - bash BuildTools/get.dependencies.sh build --with-cppad-incdir=$PWD/build/include --verbosity=1 --test
-
+  - bash ./coin.install.sh build --no-prompt --main-proj=$PROJECT --verbosity=2 --test
